# pre-commit-hooks

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test.yml
pre_commit_hooks/: clean_model_context.py
testing/: util.py
testing/resources/: Atlas_WebContext.cs
tests/: conftest.py  test_clean_model_context.py
