[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool]

[tool.black]
max_line_length = 99
quiet = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 99
quiet = true

[tool.poetry]
name = "atlas_precommit_hooks"
version = "0.0.1"
description = "Custom pre-commit hooks used in the Atlas repositories."
license = "GPL-3.0-or-later"
authors = ["Christopher Pickering <cpickering@rhc.net>"]
maintainers = ["Christopher Pickering <cpickering@rhc.net>"]
readme = "README.md"
repository = "https://github.com/atlas-bi/pre-commit-hooks"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: OS Independent",
    ]
packages = [
    { include = "pre_commit_hooks"},
]

[tool.poetry.dependencies]
python = "^3.6.2,<4.0"
coverage = { version = "^5.5", optional = true }
pytest = { version = "^6.2.5", optional = true }
pytest-cov = { version = "^2.12.1", optional = true }

[tool.poetry.extras]
test = ["coverage", "pytest", "pytest-cov"]

[tool.poetry.scripts]
clean_model_context = "pre_commit_hooks.clean_model_context:main"

[tool.pylint.messages_control]
disable = ""
