[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]

[tool]

[tool.black]
max_line_length = 99
quiet = true

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 99
multi_line_output = 3
quiet = true
use_parentheses = true

[tool.poetry]
authors = ["Christopher Pickering <cpickering@rhc.net>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent"
]
description = "Custom pre-commit hooks used in the Atlas repositories."
license = "GPL-3.0-or-later"
maintainers = ["Christopher Pickering <cpickering@rhc.net>"]
name = "atlas_precommit_hooks"
packages = [
  {include = "pre_commit_hooks"}
]
readme = "README.md"
repository = "https://github.com/atlas-bi/pre-commit-hooks"
version = "0.0.2"

[tool.poetry.dependencies]
coverage = {version = "^7.0", optional = true}
pytest = {version = "^8.0.0", optional = true}
pytest-cov = {version = "^4.0.0", optional = true}
python = "^3.6.2,<4.0"

[tool.poetry.extras]
test = ["coverage", "pytest", "pytest-cov"]

[tool.poetry.scripts]
clean_model_context = "pre_commit_hooks.clean_model_context:main"

[tool.pylint.messages_control]
disable = ""
